fix project box alignment issues and add better responsiveness overall

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,3 @@ body {
   text-rendering: optimizeLegibility;
   overflow-wrap: break-word;
 }
-
-* {
-  box-sizing: content-box;
-}
